# conan-bug-testing

./: .gitignore  README.md
project1/: CMakeLists.txt  conanfile.py
project1/include/: project1.h
project1/src/: project1.cpp
project1/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
project1/test_package/src/: example.cpp
project2/: CMakeLists.txt  conanfile.py
project2/include/: project2.h
project2/src/: project2.cpp
project2/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
project2/test_package/src/: example.cpp
